<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colleague_logo"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/colleague_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title2"
        android:text="@string/title2"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/title"
        android:layout_toRightOf="@id/colleague_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_text"
        android:text="@string/user_error_text"
        android:layout_toRightOf="@id/title"
        android:layout_marginLeft="70dp"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_caption"
        android:textStyle="bold"
        android:layout_below="@id/colleague_logo"/>

</RelativeLayout>