<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_layout">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_marginTop="0dp"
            android:scaleType="fitStart"
            android:src="@drawable/colleaguedirectoryportrait"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_toRightOf="@+id/title"
            android:id="@+id/error_text"
            android:visibility="gone"
            android:textColor="@color/bbd_fingerprint_status_error"
            android:text="@string/user_error_text"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username_label"
                android:textSize="20sp"
                android:text="@string/username_label"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:text="@string/domain_name"
                android:singleLine="true"
                style="@style/Widget.AppCompat.EditText"
                android:background="@drawable/background2"
                android:id="@+id/editbox_username"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textSize="20sp"
                android:id="@+id/password"/>

            <EditText
                android:layout_width="150dp"
                android:layout_height="30dp"
                style="@style/Widget.AppCompat.EditText"
                android:singleLine="true"
                android:background="@drawable/background2"
                android:inputType=""
                android:layout_marginLeft="16dp"
                android:id="@+id/editbox_password"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate_button"
                android:layout_marginTop="10dp"
                android:textColor="@color/kirk_bal_green_border"
                android:id="@+id/validate_button"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save_button"
                android:enabled="false"
                android:textColor="@color/bbd_grey"
                android:id="@+id/save_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validation_failed"
                android:visibility="gone"
                android:textColor="@color/bbd_fingerprint_status_error"
                android:id="@+id/validation_failed"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progressbar_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/progress_background"
            />

    </RelativeLayout>


</RelativeLayout>